--- a/ejercicio2.html
+++ b/ejercicio2.html
@@ -4,5 +4,7 @@
 </head>
 <body data-gr-ext-installed="" data-new-gr-c-s-check-loaded="14.1029.0">
 <p style="text-align: center;"><span style="font-size:22px;"><strong>Mi nombre es Ferran Badal</strong></span></p>
+
+<p style="text-align: justify;"><span style="font-size:14px;">Estoy estudiando en la Universidad de Nebrija</span>&nbsp;y esta es mi p&aacute;gina Web</p>
 </body>
 </html>
